NetBSD Problem Report #50900

From www@NetBSD.org  Sun Mar  6 17:45:06 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 92B0D7A0EB
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  6 Mar 2016 17:45:06 +0000 (UTC)
Message-Id: <20160306174505.4E2BF7ACC5@mollari.NetBSD.org>
Date: Sun,  6 Mar 2016 17:45:05 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/rump/librump/rumpvfs/rumpfs.c:936: clumsy call to memset ?
X-Send-Pr-Version: www-1.0

>Number:         50900
>Category:       kern
>Synopsis:       src/sys/rump/librump/rumpvfs/rumpfs.c:936: clumsy call to memset ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Mar 06 17:50:00 +0000 2016
>Closed-Date:    Sun Mar 06 20:13:56 +0000 2016
>Last-Modified:  Sun Mar 06 20:13:56 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160305
>Organization:
>Environment:
>Description:
[src/sys/rump/librump/rumpvfs/rumpfs.c:936] -> [src/sys/rump/librump/rumpvfs/rumpfs.c:937]: (performance) Buffer 'newdata' is being written before its old content has been used.

Source code is

        copylen = MIN(rn->rn_dlen, newlen);
        memset(newdata, 0, newlen);
        memcpy(newdata, rn->rn_data, copylen);

This could be coded up in a faster fashion, 

Suggest only zero those bytes that the memcpy doesn't touch.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50900 CVS commit: src/sys/rump/librump/rumpvfs
Date: Sun, 6 Mar 2016 14:47:41 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Mar  6 19:47:41 UTC 2016

 Modified Files:
 	src/sys/rump/librump/rumpvfs: rumpfs.c

 Log Message:
 PR/50900: David Binderman: optimize memset


 To generate a diff of this commit:
 cvs rdiff -u -r1.138 -r1.139 src/sys/rump/librump/rumpvfs/rumpfs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 06 Mar 2016 20:13:56 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.