PR/50900: David Binderman: optimize memset